solve two problems of navbar (displaying of forms and overflow)

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body{
 
 /* the navbar */
 .navbar{
-    width: 100%;
+    margin:0px;
 }
 .headForms{
     gap:5px;
